--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Nepali- Offical Valorant Esport-Team!</title>
-  <meta name="title" content="Unigine - Epic Games Made For True Gamers!">
-  <meta name="description" content="This is an esports and gaming html template made by codewithsadee">
+  <title>DarkLight-Offical Valorant Esport-Team!</title>
+  <meta name="title" content="Nepal-Offical Valorant Esport-Team!">
+  <meta name="description" content="This is an esports Team From Nepal">
 
   <!-- 
     - favicon
@@ -64,9 +64,9 @@
             <a href="#tournament" class="navbar-link" data-nav-link>tournament</a>
           </li>
 
-          <li class="navbar-item">
-            <a href="#news" class="navbar-link" data-nav-link>news</a>
-          </li>
+         // <li class="navbar-item">
+           // <a href="#news" class="navbar-link" data-nav-link>news</a>
+          <///li>
 
           <li class="navbar-item">
             <a href="#" class="navbar-link" data-nav-link>contact</a>
