--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
       <div class="hero has-before" id="home">
         <div class="container">
 
-          <p class="section-subtitle">Enjoy The Games</p>
+          <p class="section-subtitle">DARKLIGHT</p>
 
-          <h1 class="h1 title hero-title">Epic Games Made For <br> True Gamers!</h1>
+          <h1 class="h1 title hero-title">Nepal-Offical Valorant Esport-Team!</h1>
 
           <a href="#" class="btn" data-btn>Join With Us</a>
 
