--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <a href="#tournament" class="navbar-link" data-nav-link>tournament</a>
           </li>
 
-         // <li class="navbar-item">
-           // <a href="#news" class="navbar-link" data-nav-link>news</a>
+          <li class="navbar-item">
+            <a href="#news" class="navbar-link" data-nav-link>news</a>
           <///li>
 
           <li class="navbar-item">
@@ -132,10 +132,10 @@
       <section class="section news" aria-label="our latest news" id="news">
         <div class="container">
 
-          <p class="section-subtitle" data-reveal="bottom">What's On Our Mind</p>
+          <p class="section-subtitle" data-reveal="bottom">DarkLight</p>
 
           <h2 class="h2 section-title" data-reveal="bottom">
-            News And <span class="span">Headlines</span>
+            OUR <span class="span">TEAMS</span>
           </h2>
 
           <p class="section-text" data-reveal="bottom">
