--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </h2>
 
           <p class="section-text" data-reveal="bottom">
-            Our success in creating business solutions is due in large part to our talented and highly committed team.
+            Our success will be in team.
           </p>
 
           <ul class="news-list">
@@ -147,8 +147,8 @@
             <li data-reveal="bottom">
               <div class="news-card">
 
-                <figure class="card-banner img-holder" style="--width: 600; --height: 400;">
-                  <img src="./assets/images/news-1.jpg" width="600" height="400" loading="lazy"
+                <figure class="card-banner img-holder" style="--width: 300; --height: 200;">
+                  <img src="./assets/images/news-1.jpg" width="300" height="200" loading="lazy"
                     alt="Innovative Business All Over The World." class="img-cover">
                 </figure>
 
